--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,39 @@
-# History files
-.Rhistory
-.Rapp.history
+data <- read.csv("R/Proyects/r-course-master/data/tema1/missing-data.csv", 
+                 na.strings = "")
+data$Income.mean <- ifelse(is.na(data$Income), 
+                           mean(data$Income, na.rm = TRUE),
+                           data$Income
+                           )
 
-# Session Data files
-.RData
 
-# User-specific files
-.Ruserdata
+#x es un vector de datos que puede contener NA
+rand.impute <- function(x) {
+  # missing contiene un vector de valores T/F dependiendo del NA de x
+  missing <- is.na(x)
+  #n.missing contiene cuantos valores son NA dentro de x
+  n.missing <- sum(missing)
+  #x.obs son los valores conocidos que tienen dato diferente de NA en x
+  x.obs <- x[!missing]
+  #por defecto, devolverÃ© lo mismo que habÃ­a entrado por parÃ¡metro
+  imputed <- x
+  #en los valores que faltaban, los reemplazamos por una muestra
+  #de los que si conocemos (MAS)
+  imputed[missing] <- sample(x.obs, n.missing, replace = TRUE)
+  return (imputed)
+}
 
-# Example code in package build process
-*-Ex.R
 
-# Output files from R CMD build
-/*.tar.gz
+random.impute.data.frame <- function(dataframe, cols){
+  names <- names(dataframe)
+  for(col in cols){
+    name <- paste(names[col], "imputed", sep = ".")
+    dataframe[name] = rand.impute(dataframe[,col])
+  }
+  dataframe
+}
 
-# Output files from R CMD check
-/*.Rcheck/
 
-# RStudio files
-.Rproj.user/
+data <- read.csv("../data/tema1/missing-data.csv", na.strings = "")
+data$Income[data$Income==0]<-NA
+data <- random.impute.data.frame(data, c(1,2))
 
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
